# kubollama

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.app  Dockerfile.ollama  README.md  docker-compose.yml  pyproject.toml  pytest.ini
k8s/: app.yml  ollama.yml
src/ollama_client/: client.py  main.py  ollama.py
