

[project]
name = "ollama-k8s"
version = "0.1.0"
description = "Simple chat interface to talk to Ollama deployed in kubernetes"
authors = [{ name = "Muhammad Ahsan", email = "muhammad.ahsan@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["requests >=2.32.5,<3.0.0"]

[dependency-groups]
dev = ["black>=25.12.0", "pytest>=9.0.2"]


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
